[tool.poetry]
name = "badgie"
version = "0.1.0"
description = ""
authors = ["Brett Weir <brett@brettops.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
badgie = 'badgie.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
