[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "badgie"
dynamic = ["version"]
authors = [
  { name="Brett Weir", email="brett@brettops.io" },
  { name="CoolCat467" },
]
description = "Add all the badges with Badgie!"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = ["badge", "template", "markdown"]
dependencies = [
    "attrs==23.1.0",
    "python-gitlab==4.1.1",
    "pyyaml==6.0.1",
    "termcolor==2.3.0",
    "requests==2.31.0",
]

[tool.setuptools.dynamic]
version = {attr = "badgie._version.__version__"}

[project.urls]
"Homepage" = "https://github.com/CoolCat467/badgie"
"Source" = "https://github.com/CoolCat467/badgie"
"Bug Tracker" = "https://github.com/CoolCat467/badgie/issues"

[tool.setuptools.package-data]
badgie = ["py.typed"]

[project.scripts]
badgie = "badgie.cli:main"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=badgie"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.black]
line-length = 79
target-version = ['py39']

[tool.ruff.isort]
combine-as-imports = true

[tool.pycln]
all = true
disable_all_dunder_policy = true

[tool.ruff]
line-length = 79
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]
select = [
    "A",  # flake8-builtins
    "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT",  # flake8-2020
    "TCH",  # flake8-type-checking
    "PYI",  # flake8-pyi
    "UP",  # pyupgrade
]
extend-ignore = [
    "E501",  # line-too-long
    "S101",  # use of assert for tests and type narrowing
    "PYI041",  # redundant-numeric-union
]

[tool.ruff.per-file-ignores]
"path/to/__init__.py" = [
    'F401',
    'E402'
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py310, py311, py312, pytest, mypy
    isolated_build = false

    [gh-actions]
    python =
        3.10: py310, pytest
        3.11: py311, pytest
        3.12: py312, pytest, mypy

    [testenv]
    setenv =
        PYTHONPATH = {toxinidir}

    [testenv:pytest]
    deps =
        pytest
        pytest-cov
        pytest-trio
    commands = pytest --basetemp={envtmpdir}

    [testenv:mypy]
    deps =
        mypy
    commands = mypy src
"""
